# Academic_validator_TTD

./: .gitignore  README.md  README_WEB.md  formal_requirements_and_tdd_tz.md  pyproject.toml  requirements.txt  university_rules.json
fixtures/: sample.docx
src/: main.py  schemas.py  university_rules.json
src/contour_a/: document_loader.py  docx_parser.py
src/validators/: __init__.py  font_validator.py  format_validator.py  paragraph_validator.py
src/web/: __init__.py  main.py
src/web/templates/: index.html
tests/: conftest.py  test_auto_validators.py  test_document_loader.py  test_docx_parser.py  test_format_validation.py  test_rules.py
tests/fixtures/: README.md  setup_fixtures.py
tests/fixtures/appendix/: wrong_P_1_appendix_no_new_page.docx  wrong_P_2_appendix_label_position.docx  wrong_P_3_appendix_title_format.docx  wrong_P_4_appendix_numbering_order.docx
tests/fixtures/correct/: correct_document.docx
tests/fixtures/formatting/: wrong_F_1_font.docx  wrong_F_2_spacing.docx  wrong_F_3_alignment.docx  wrong_F_4_margins.docx  wrong_F_5_indent.docx  wrong_F_6_para_spacing.docx
tests/fixtures/references/: correct_document.docx  wrong_L_10_url_no_date.docx  wrong_L_11_invalid_reference.docx  wrong_L_12_hyphen_instead_of_dash.docx  wrong_L_1_bracket_format.docx  wrong_L_2_repeated_ref_format.docx  wrong_L_3_multiple_order.docx  wrong_L_4_alphabet_order.docx  wrong_L_4_alphabetical_order.docx  wrong_L_4_cyrillic_before_latin.docx  wrong_L_5_numbering.docx  wrong_L_7_min_sources.docx  wrong_L_8_freshness.docx  (+2 more)
validators/: rules.py
(+43 files in other folders)
