[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isu-normkontroler"
version = "0.1.0"
description = "Интеллектуальный нормоконтролёр ВКР ИГУ"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "python-docx>=0.8.11",
    "PyPDF2>=3.0.0",
    "lxml>=4.9.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
llm = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
strict = true
